--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <div class="header">
-<img src="https://github.com/hiro-eng/link/blob/main/IMG_20210301_060251.jpg?raw=true" width="100%" height="100%">
+<img src="https://github.com/hiro-eng/link/blob/main/IMG_20210301_060251.jpg?raw=true" width="646px" height="220px">
 </div>
 <div class="link-wrapper">
 <div class="container">
