--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 <br>
 <div class="link-wrapper">
 <div class="container">
-<a href=""><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545745284.jpg?raw=true" width="840px" height="286px"></a>
-<a href=""><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545811334%20(1).jpg?raw=true" width="840px" height="286px"></a>
-<a href=""><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545784008.jpg?raw=true" width="840px" height="286px"></a>
-<a href=""><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545768366.jpg?raw=true" width="840px" height="286px"></a>
-<img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545888788.jpg?raw=true" width="840px" height="286px">
-<a href=""><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545851827.jpg?raw=true" width="840px" height="286px"></a>
-<a href=""><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545835153.jpg?raw=true" width="840px" height="286px"></a>
-<a href=""><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545872747.jpg?raw=true" width="840px" height="286px"></a>
+<a href="https://www.instagram.com/invites/contact/?i=1p620ydul39h9&utm_content=hq5kudz"><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545745284.jpg?raw=true" width="840px" height="286px"></a>
+<a href="https://www.facebook.com/teck.teck.779642"><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545811334%20(1).jpg?raw=true" width="840px" height="286px"></a>
+<a href="https://twitter.com/world_teck?s=09"><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545784008.jpg?raw=true" width="840px" height="286px"></a>
+<a href="https://twitter.com/ZX5m2r7sDyGJ4sF?s=09"><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545768366.jpg?raw=true" width="840px" height="286px"></a>
+<a href="https://twitter.com/TABETE15?s=09"><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545888788.jpg?raw=true" width="840px" height="286px"></a>
+<a href="https://twitter.com/SjoT2wArFFPsU12?s=09"><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545851827.jpg?raw=true" width="840px" height="286px"></a>
+<a href="https://twitter.com/fW3lJRkocdmPe9T?s=09"><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545835153.jpg?raw=true" width="840px" height="286px"></a>
+<a href="mailto:teckteckwd@gmail.com"><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545872747.jpg?raw=true" width="840px" height="286px"></a>
 <a href=""><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545964228.jpg?raw=true" width="840px" height="286px"></a>
-<a href=""><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614032812990.jpg?raw=true" width="840px" height="286px"></a>
-<a href=""><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1613006442644.jpg?raw=true" width="840px" height="286px"></a>
+<a href="https://www.mag2.com/m/0001694254"><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614032812990.jpg?raw=true" width="840px" height="286px"></a>
+<a href="https://www.mag2.com/m/0001694180"><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1613006442644.jpg?raw=true" width="840px" height="286px"></a>
 
 </div>
 </div>
