--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <br>
 <div class="link-wrapper">
 <div class="container">
-<a href="https://www.instagram.com/invites/contact/?i=1p620ydul39h9&utm_content=hq5kudz"><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545745284.jpg?raw=true" width="840px" height="286px"></a>
+<a href="https://www.instagram.com/invites/contact/?i=1p620ydul39h9&utm_content=hq5kudz" target="_blank"><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545745284.jpg?raw=true" width="840px" height="286px"></a>
 <a href="https://www.facebook.com/teck.teck.779642"><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545811334%20(1).jpg?raw=true" width="840px" height="286px"></a>
 <a href="https://youtu.be/g80GpwDyqjc"><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614550993686.jpg?raw=true" width="840px" height="286px"></a>
 <a href="https://twitter.com/world_teck?s=09"><img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614545784008.jpg?raw=true" width="840px" height="286px"></a>
