--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <div class="header">
-<img src="https://github.com/hiro-eng/link/blob/main/IMG_20210301_060251.jpg?raw=true" width="516px" height="176px">
+<img src="https://github.com/hiro-eng/link/blob/main/IMG_20210301_060251.jpg?raw=true" width="840px" height="286px">
 </div>
 <br>
 <div class="link-wrapper">
@@ -55,6 +55,11 @@ body{
     0%{opacity: 0}
     100%{opacity:1}
 }
+	
+	
+.header{
+	text-align:center;
+	}
 	
 .link-wrapper{
 	text-align:center;
