--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <footer>
 <img src="https://github.com/hiro-eng/link/blob/main/Logopit_1613941431097.jpg?raw=true" width="100%" height="100%">
-<img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614553045544.jpg?raw=true" width="323px" height="110px">
+<img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614553045544.jpg?raw=true" width="646px" height="220px">
 	
 </footer>
 
@@ -61,6 +61,7 @@ body{
 	
 .header{
 	text-align:;
+	margin-top:20px;
 	}
 	
 .link-wrapper{
@@ -69,6 +70,9 @@ body{
 	margin-bottom:50px;
 	}
 
+.footer{
+	text-align:center;
+	}
 </style>
     
 </body>
