--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
 <footer>
 <img src="https://github.com/hiro-eng/link/blob/main/Logopit_1613941431097.jpg?raw=true" width="100%" height="100%">
+
 <img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614553045544.jpg?raw=true" width="646px" height="220px">
 	
 </footer>
@@ -70,7 +71,7 @@ body{
 	margin-bottom:50px;
 	}
 
-.footer{
+footer{
 	text-align:center;
 	}
 </style>
