--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body{
 	
 	
 .header{
-	text-align:;
+	text-align:center;
 	margin-top:20px;
 	}
 	
@@ -73,6 +73,7 @@ body{
 
 footer{
 	text-align:center;
+	margin-bottom:40px;
 	}
 </style>
     
