--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
 <footer>
 <img src="https://github.com/hiro-eng/link/blob/main/Logopit_1613941431097.jpg?raw=true" width="100%" height="100%">
-
+<div class="copy">
 <img src="https://github.com/hiro-eng/link/blob/main/Logopit_1614553045544.jpg?raw=true" width="646px" height="220px">
-	
+</div>
 </footer>
 
 
@@ -73,8 +73,13 @@ body{
 
 footer{
 	text-align:center;
-	margin-bottom:40px;
 	}
+	
+.copy{
+	margin-bottom:40px;
+	margin-top:40px;
+	}
+	
 </style>
     
 </body>
