--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <div class="header">
 <span id="top">
 <img src="https://github.com/hiro-eng/link/blob/main/IMG_20210301_060251.jpg?raw=true" width="840px" height="286px"></span>
+<br>
+<img src="https://github.com/hiro-eng/link/blob/main/IMG_20210302_035044.jpg?raw=true">
 </div>
 <br>
 <div class="link-wrapper">
